--- a/topic1/1_1.md
+++ b/topic1/1_1.md
@@ -8,12 +8,12 @@ layout: default
 
 ---
 
-# 1.1
+# **1.1**
 Linux Evolution and Popular Operating Systems  
 Weight: 2
 
 
-## Linux general  
+## **Linux general**  
 - Based on unix by bell labs
 - Common enviros/platforms: smartphone, desktop, server.
 - Distro considerations:
@@ -29,18 +29,18 @@ Weight: 2
     - Smartwatches
     - Android Auto
 
-### Debian  
+### **Debian**  
 - Package: dpkg  
 - Considered more advanced than Ubuntu  
 - More stable than Ubuntu  
 
-### Ubuntu  
+### **Ubuntu**  
 - Mission: easy to use desktop  
     - Cut cost of pro services  
 - Recommended for beginners  
 - Less stable than Debian  
 
-### Red Hat  
+### **Red Hat**  
 - Acquired by IBM in 2019  
 - Started in 1994  
 - Reliable enterprise solution  
@@ -49,26 +49,26 @@ Weight: 2
 - CentOS uses source code of Red Hat & is free but unsupported  
 - RH & Centos optimized for server environments  
 
-### Fedora  
+### **Fedora**  
 - Aimed at desktop computers  
 - Progressive, aggressive adoption of new tech  
 - Test bed for RHEL  
 - All RH bases use package: rpm  
 
-### SUSE
+### **SUSE**
 - Known for YaST config tool: allows admins to install and config software and hardware, set up servers and networks
 - Commercial ed.: SUSE Linux Enterprise Server 
     - Comes as both a server and desktop enviro
     - Is suitable for enterprise and production deployment 
 - openSUSE allows for devs to further test and develp the system, is free
 
-### QubesOS  
+### **QubesOS**  
 - Secure desktop enviro
 
-### Kali  
+### **Kali**  
 - Pen-testing 
 
-### CentOS
+### **CentOS**
 - Among most suitable for business
     - As well as Ubuntu LTS
         - Better support
@@ -84,11 +84,11 @@ Weight: 2
     - Android, mainly mobile phones
     - Raspbian, mainly RaspberryPi
 
-### Android  
+### **Android**  
 - Base is modified version of Linux kernel with additional open source software  
 - Freely available in open source as AOSP, Android Open Source Projects  
 
-### Raspian  
+### **Raspian**  
 - RaspberryPi
     - GPIO (general purpose input output) pins
         - Used to attach electronic devices and extension boards  
@@ -101,7 +101,7 @@ Weight: 2
     - Can function as a server or firewall
 - Prominent distro is Raspbian based on Debian  
 
-### Linux & Cloud  
+### **Linux & Cloud**  
 - As of 2017, Linux runs 90% of public cloud workload
 - Linux usually offered as part of IaaS 
 - Benefits of cloud computing
