--- a/topic1/1_3.md
+++ b/topic1/1_3.md
@@ -8,24 +8,24 @@ layout: default
 
 ---
 
-# 1.3
+# **1.3**
 Open Source Software and Licensing  
 Weight: 1  
 
-## The four essential freedoms
+## **The four essential freedoms**
 - Freedom 0
-    - Freedom to run the program as you wish, for any purpose.
+    - Freedom to run the program as you wish, for any purpose
 - Freedom 1
-    - Freedom to study how the program works, and change it so it does your computing as you wish.
-    - Access to source code is a precondition.
+    - Freedom to study how the program works, and change it so it does your computing as you wish
+    - Access to source code is a precondition
 - Freedom 2
-    - Freedom to redistribute copies so you can help others.
+    - Freedom to redistribute copies so you can help others
 - Freedom 3
-    - Freedom to distribute copies of your modified versions to others.
-    - Gives whole community chance to benefit from changes.
-    - Access to source code is a precondition.
+    - Freedom to distribute copies of your modified versions to others
+    - Gives whole community chance to benefit from changes
+    - Access to source code is a precondition
 
-## FOSS & FLOSS
+## **FOSS & FLOSS**
 - FOSS
     - Free & open source software
 - FLOSS
@@ -33,7 +33,7 @@ Weight: 1
 - Proprietary
     - For profit, controlled, limited 
 
-## Copyleft
+## **Copyleft**
 - *Free Software Foundation* created licenses
     - *GNU General Public License* (GPL)
         - One of the most important license for free software
@@ -57,7 +57,7 @@ Weight: 1
         - Licensing under multiple licenses
         - e.g. a free license and a proprietary license
 
-## Open source & licenses 
+## **Open source & licenses**
 - *Open Source Initiative* (OSI)
     - Has standardized procedure for checking OS software license compliance
     - Has more than 80 recognized OS licenses on the OSI website
@@ -76,10 +76,10 @@ Weight: 1
         - *2-Clause BSD License*, aka *Simplified BSD License*, or *FreeBSD License*
             - Consists of a standardized liability clause and the following:
                 - Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
-                   - 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 
-                   - 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
+                   1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 
+                   2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
 
-### Creative commons 
+### **Creative commons**
 - CC BY (Attribution)
     - Anyone can edit and distribute the work, must name original author
 - CC BY -SA (Attribution-ShareAlike)
@@ -93,7 +93,7 @@ Weight: 1
 - CC BY -NC -ND (Attribution-NonCommercial-NoDerivatives)
     - Attribution, non-commercial conditions, and unchanged
 
-## Business models in open source
+## **Business models in open source**
 - *Crowdfunding* 
     - Collection of money donations 
     - Donors receive pre-defined bonus in event of success
