--- a/topic1/1_4.md
+++ b/topic1/1_4.md
@@ -8,11 +8,11 @@ layout: default
 
 ---
 
-# 1.4
+# **1.4**
 ICT Skills and Working in Linux  
 Weight: 2  
 
-## Desktop environments 
+## **Desktop environments**
 - Modularity
     - Different parts of the Linux system are developed by different projects and developers
     - Several options for desktop enviros 
@@ -32,7 +32,7 @@ Weight: 2
 - Many terminals available 
     - *Xterm* another choice
 
-## Presentations and projects
+## **Presentations and projects**
 - LibreOffice Impress
     - part of LibreOffice suite
     - Open source replacement for Microsoft Office
@@ -55,7 +55,7 @@ Weight: 2
     - GanttProject
     - ProjectLibre
 
-## Industry uses of Linux
+## **Industry uses of Linux**
 - Estimated 68% of web servers are Unix
     - Largest portion of those are Linux
     - Allows for lower cost and greater scalability
@@ -89,7 +89,7 @@ Weight: 2
 - OpenStack
     - Collection of open source software that can make use of different hypervisors and other tools in order to offer a complete IaaS cloud enviro on premises
 
-## Privacy issues when using the internet
+## **Privacy issues when using the internet**
 - Cookie tracking
     - Websites save small files on computer to store and retrieve information
     - Meant for ease of use UX
@@ -118,7 +118,7 @@ Weight: 2
         - Can generate strong new passwords for you
         - *KeePass* and *Bitwarden* strong password managers
 
-## Encryption
+## **Encryption**
 - *Transport Layer Security (TLS)*
     - Protocol that uses cryptography to secure network connections
     - Successor of *Secure Sockets Layer (SSL)*
@@ -142,10 +142,14 @@ Weight: 2
         - Stacked
             - Implemented on top of existing filesystem
             - Files and directories encrypted before being stored
+            - Happening at the file and directory level
+            - Can choose while files and directories get encrypted
         - Block
             - Below filesystem layer
             - Makes sure everything that is written to a block device is encrypted
             - If observed offline, will look like random data
+            - Happening at the disk or partition level
+            - Everything is being encrypted and no file or directory can opt-out
     - *dm-crypt*
         - De facto standard for block encryption for Linux systems 
         - Native in the kernel
