--- a/topic2/2_1.md
+++ b/topic2/2_1.md
@@ -8,13 +8,13 @@ layout: default
 
 --- 
 
-# 2.1
+# **2.1**
 Command Line Basics  
 Weight: 3  
 
-## Lesson 1
+## **Lesson 1**
 
-### Shell
+### **Shell**
 - Text mode program that reads user input and interprets it as commands to the system
 - A few common shells
     - Bourne-again shell (Bash)
@@ -49,7 +49,7 @@ Weight: 3
         - `$` indicates shell is run by regular user
         - `#` indicates shell is run by superuser `root`
 
-### Command line structure
+### **Command line structure**
 - Basic structure
     - `command [option(s)...] [argument(s)...]
     - Example: `$ ls -l /home`
@@ -59,7 +59,7 @@ Weight: 3
     - `--help`
         - Use after command to display short overview of command
 
-### Command behavior types
+### **Command behavior types**
 - Internal
     - Part of shell itself
     - Main purpose is executing tasks inside the shell
@@ -71,7 +71,7 @@ Weight: 3
 - `type`
     - Follow with command to show type
 
-```
+```bash
 $ type echo
 echo is a shell builtin
 
@@ -79,7 +79,7 @@ $ type man
 man is /usr/bin/man
 ```
 
-### Quoting
+### **Quoting**
 - Three types of quotes in Bash
     - Double quotes
     - Single quotes
@@ -93,7 +93,7 @@ man is /usr/bin/man
             - `` ` ``
     - Although you could create filenames with spaces using double quotes, best practice is to use `_` or `.` as spacers instead
 
-```
+```bash
 $ touch "new file"
 vs
 $ touch new_file
@@ -106,7 +106,7 @@ $ touch new_file
     - Removes special meanings of characters
     - Placed before special character
 
-```
+```bash
 tom@mycomputer:~$ echo I am $USER
 I am tom
 tom@mycomputer:~$ echo "I am $USER"
@@ -117,9 +117,9 @@ tom@mycomputer:~$ echo I am \$USER
 I am $USER
 ```
 
-## Lesson 2
+## **Lesson 2**
 
-### Variables
+### **Variables**
 - Pieces of storage for data
     - Such as text or numbers
     - Value can be accessed at a later time
@@ -142,14 +142,14 @@ I am $USER
     - Most shells provide config files that contain variables which are set on shell launch
     - If variable should be permanent, it must be added to config file
 
-### Manipulating variables 
+### **Manipulating variables**
 - Set up local variable using `=`
 - Access value using `$`
     - Tells Bash to expand the variable and use its value
 - Remove variable using `unset` without `$` as it is now an argument
     - If `$` is used it expands the variable to it's value instead of affecting the variable name 
 
-```
+```bash
 $ greeting=hello
 $ echo $greeting
 hello
@@ -158,7 +158,7 @@ $ unset greeting
 
 - Use `export` to make variable available to subprocesses and make it an enviro variable
 
-```
+```bash
 $ export greeting=hello
 ```
 
@@ -167,7 +167,7 @@ $ export greeting=hello
         - `TZ` holds timezone
         - `date` command displays date and time information
 
-```
+```bash
 $ TZ='America/Los_Angeles' date
 Sun July 4 12:12:12 PM PDT 2025
 ```
@@ -180,7 +180,7 @@ Sun July 4 12:12:12 PM PDT 2025
     - `which` can be used to locate executable files
     - Order of elements in `PATH` defines lookup order
 
-```
+```bash
 $ echo $PATH
 /home/user/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games
 $ PATH=$PATH:new_directory
@@ -191,9 +191,11 @@ $ which nano
 ```
 
 - Command substitution
-    - ``` var_name=`command [OPTION] path_here` ```
+    ```bash
+    var_name=`command [OPTION] path_here` 
+    ```
 
-```
+```bash
 $ nr_files=`wc -l /etc/passwd`
 $ echo $nr_files
 100 /etc/passwd
