--- a/topic2/2_2.md
+++ b/topic2/2_2.md
@@ -8,11 +8,11 @@ layout: default
 
 --- 
 
-# 2.2
+# **2.2**
 Using the Command Line to Get Help  
 Weight: 2  
 
-## Getting Help on the Command Line
+## **Getting Help on the Command Line**
 - `/usr/share/doc/`
     - Stores most documentation of commands used by system 
     - Contains directory for most packages installed on system
@@ -79,15 +79,15 @@ Weight: 2
     - Contains hyperlinks 
     - Use `?` for navigation instructions
 - `locate`
-    - Searches within a database
-    - Outputs ever matching string
+    - Searches within a pre-built database
+    - Outputs every matching string
     - Supports wildcard and regular expressions use
     - Behaves as it pattern is surrounded by asterisks by default
         - Allows for substrings instead of exact filename
         - Recent files might not be found
             - Update database using `sudo updatedb`
 - `find`
-    - Searches directory tree recursively
+    - Searches directory tree recursively in real-time
     - Does not maintain a database like `locate`
     - Supports wildcards and regular expressions
     - Requires at least a path
@@ -96,7 +96,7 @@ Weight: 2
     - Expressions can be added to filter 
         - e.g. `-name` 
 
-```
+```bash
 $ find ~ -name thesis.pdf
 /home/carol/Downloads/thesis.pdf
 ```
