--- a/topic2/2_3.md
+++ b/topic2/2_3.md
@@ -8,13 +8,13 @@ layout: default
 
 --- 
 
-# 2.3
+# **2.3**
 Using Directories and Listing Files  
 Weight: 2  
 
-## Lesson 1
+## **Lesson 1**
 
-### Files, Directories, Naming
+### **Files, Directories, Naming**
 
 - Files
     - Contain data
@@ -26,7 +26,7 @@ Weight: 2
     - Can contain
         - Files
         - Subdirectories
-            - Has a *parent* / *child* relationship
+            - Have `parent/child` relationships
 - Naming
     - Case sensitive
     - Files and directories can contain
@@ -40,7 +40,7 @@ Weight: 2
             - Have no special meaning in Linux
             - There for human understanding
 
-### Navigating the Filesystem
+### **Navigating the Filesystem**
 
 - `pwd`
     - *Print working directory*
@@ -60,7 +60,8 @@ Weight: 2
 - `cd` 
     - Changes directory
     - Can use absolute or relative path
-        - Use `ls` to relative paths for current location
+        - Use `ls` to list the files and directories in your current location
+        - Can help you construct relative paths for the `cd` command
     - `cd ..` up a level
     - `cd /` root directory
     - `cd ~` home directory
@@ -71,9 +72,9 @@ Weight: 2
         - Only has meaning in relation to current location
 
 
-## Lesson 2
+## **Lesson 2**
 
-### Home Directories
+### **Home Directories**
 - Changes in root affect all users
 - Changes in root require admin perms
 - Home
@@ -88,7 +89,7 @@ Weight: 2
         - `$ ls ~michael`
         - Must have permission
 
-### Hidden Files and Directories
+### **Hidden Files and Directories**
 - `ls -a`
     - Lists all, incl. hidden, files and directories
     - Hidden files and directories will always begin with a period `.`
@@ -109,12 +110,12 @@ Weight: 2
         - Timestamp of last modification
         - Name
 
-```
+```bash
 $ ls -l
 -rw-r--r-- 1 user staff    3606 Jan 13  2017 report2018.txt
 ```
 
-### Additional `ls` Options
+### **Additional `ls` Options**
 
 - `ls -lh` 
     - Combines *long list* with *human readable* 
