--- a/topic2/2_4.md
+++ b/topic2/2_4.md
@@ -8,11 +8,11 @@ layout: default
 
 --- 
 
-# 2.4
+# **2.4**
 Creating, Moving, and Deleting Files  
 Weight: 2 
 
-## Creating 
+## **Creating**
 
 - Case sensitivity
     - Linux is case sensitive
@@ -27,6 +27,10 @@ Weight: 2
 - `mkdir` 
     - Creates directories
     - Add `-p` or `--parents` option to create subdirectories simultaneously
+    ```bash
+    $ mkdir -p ~/Documents/Projects/2024/September
+    ```
+    - If only `~/Documents` exists, this will create all subdirectories after `~/Documents`
 - `find` 
     - Used to search for files and directories
     - Without options, returns listing of all files, directories, sub-dirs. of current directory
@@ -43,7 +47,7 @@ Weight: 2
     - `>` will overwrite if file name already exists
     - `>>` appends text to the end of existing file
 
-## Moving
+## **Moving**
 - `mv`
     - Last argument is destination dir
     - Multiple files can be specified
@@ -51,21 +55,21 @@ Weight: 2
     - Can be used to rename
         - `mv dir1 dir2`
 
-## Deleting
+## **Deleting**
 - `rm` can delete files and directories
     - Use `rm -r` to recursively remove nested directories
-        - USE WITH CAUTION
+        - **USE WITH CAUTION**
         - `rm -ri` to prompt for confirmation before deletion
 - `rmdir` will delete empty directories
 
-## Copying
+## **Copying**
 - `cp` copies files and directories
     - Use last argument as destination of copies
     - If last argument is a file, it will be overwritten 
     - Use `-r` for copying directories
         - Will also copy contents of directory
 
-## Globbing
+## **Globbing**
 - Pattern matching language 
 - `*` 
     - Matches any number of any characters
@@ -75,7 +79,12 @@ Weight: 2
 - `[]`
     - Matches a class of characters 
         - `[:classname:]`
-        - e.g. `ls file[[:digit:]]`
+        ```bash
+        $ ls
+        file1 file2 filex filey
+        $ ls file[[:digit:]]
+        file1 file2
+        ```
     - Both `[]` and `{}` will work with `ls` to display ranges
         - `ls file[1-3]` or `ls file{1..3}` 
     - Only `{}` will work with `touch` to write a range of individual files
