--- a/topic3/3_1.md
+++ b/topic3/3_1.md
@@ -8,17 +8,17 @@ layout: default
 
 ---
 
-# 3.1
+# **3.1**
 Archiving Files on the Command Line  
 Weight: 2 
 
-## Introduction
+## **Introduction**
 - Compression
     - Reduces space consumption
     - Reduces data transfer size on networks
-- Lossless
+- Lossless compression
     - Can be uncompressed back to original
-- Lossy
+- Lossy compression
     - Cannot be recovered
     - Often used when:
         - Quality loss is imperceptible for humans
@@ -36,7 +36,9 @@ Weight: 2
         - `gzip` tools prefixed with `z`
             - e.g. `zcat`, `zgrep`, etc.
         - `bzip2` prefixed with `bz`
+            - e.g. `bzdiff`, etc.
         - `xz` prefixed with `xz`
+            - e.g. `xzless`, `xzmore`, etc.
 - Archiving tools
     - Used to bundle files/dirs. into single file
     - Common uses:
@@ -48,7 +50,7 @@ Weight: 2
         - Default
         - Not included
 
-## tar
+## **tar**
 - `tar`
     - Stands for *tape archive*
     - Most common Linux archiver
@@ -76,7 +78,7 @@ Weight: 2
     - Updater, appends does not overwrite 
     - Add files to existing uncompressed `tar` archive
     - Will cause error if attempted with compressed `tar`
-- Compression calls as options
+- Using compression tools as `-options` with `tar`
     - `bzip2`
         - `-j`
         - e.g. `tar -cjf file.tar.bz2 bigfile1`
@@ -88,7 +90,7 @@ Weight: 2
         - e.g. `tar -czf file.tar.gz bigfile1`
     - Remember to always add correct file extensions
 
-## zip
+## **zip**
 - Windows compatibility 
     - `tar` applications uncommon in Windows
     - Use ZIP files for Windows interaction 
