--- a/topic3/3_2.md
+++ b/topic3/3_2.md
@@ -8,13 +8,13 @@ layout: default
 
 ---
 
-# 3.2
+# **3.2**
 Searching and Extracting Data from Files  
 Weight: 3 
 
-## Lesson 1
+## **Lesson 1**
 
-### I/O Redirection 
+### **I/O Redirection**
 - *stdin*
     - Channel 0
     - Standard input
@@ -26,23 +26,39 @@ Weight: 3
 - *stderr*
     - Channel 2
     - Default redirects error outputs
-        - For command
+        - For commands
         - For programs 
         - Input/output can be redirected 
 - Redirection of command components 
-    - Transmit information to command
-    - Redirect output to file
-    - Redirect from or to command via text file
+    - Overview
+        - Transmit information to command
+        - Redirect output to file
+        - Redirect *from* or *to* command via text file
 - `>`
     - Redirect output to file
-    - Follow will name of file
+    - Follow with name of file
     - Will create non-existent file
     - Will overwrite existing file
+    ```bash
+    $ cat home.txt
+    home sweet home
+    $ echo "is where heart is" > home.txt
+    $ cat home.txt
+    is where heart is
+    ```
 - `>>`
     - Appends and returns carriage to next line
     - Will not overwrite file
     - Can create new file
     - Follow with desired file name
+    ```bash
+    $ cat home.txt
+    home sweet home
+    $ echo "is where heart is" >> home.txt
+    $ cat home.txt
+    home sweet home
+    is where heart is
+    ```
 - `2>`
     - Redirects just error messages
     - Follow with desired file name
@@ -58,23 +74,41 @@ Weight: 3
     - Provides no data when read from
 - `<` 
     - Input data to a command from file
-    - `cat < filename.txt`
     - Used with commands that don't accept file arguments
         - e.g. `tr -d "s" < filename.txt`
             - Deletes the letter "s" out of filename.txt 
+    ```bash
+    $ cat unique.txt
+    Sisal
+    Supine
+    Sinister
+    $ tr -d "s" < unique.txt
+    ial
+    upine
+    initer
+    ```
 - `<<`
     - *Here document*
-    - Represents block of code/text which can be redirected to the command or interactive program
-    - Different types of scripting languages can take input directly from CLI without using text files
-    - Will present you with lines you can return in without submission
-    - Submit by entering name given after `<<` followed by return carriage 
+    - Presents user with a space to write a block of text
+        - Can *return carriage* in space without submission
+    - Text can be redirected to the command or interactive program
+    - Some languages can take input directly from CLI without using text files
+    - End text with *keyword* given after `<<`
+        - Submit with *return carriage*
+    ```bash
+    cat << inthehat
+    This is the first line.
+    This is the second line.
+    inthehat
+    ```
     - Can be combined with other redirection
         - e.g. `cat << inthehat > inthehat.txt`
+            - Redirects into the text file
 - `&>`, `&>>`
     - Combines channel 1 and channel 2 outputs 
     - Use same rules as `>` and `>>` but with the channels combined
 
-### Command Line Pipes 
+### **Command Line Pipes**
 - `|`
     - *Pipes*
     - Link commands directly
@@ -101,11 +135,24 @@ Weight: 3
     - `-l` counts only lines
     - `-c` counts only bytes
 - `cut`
-    - Prints selected parts of lines from FILE to standard output
-    - `-f` specifies the field 
+    - Extracts specific parts of lines from an input source
+        - Prints lines to standard output
+    - `-f` specifies the field to be extracted
+        - Numbered starting from 1
     - `-d` specifies how fields are to be defined
         - Delimiter
-        - e.g. `/` will define fields as between each `/`S
+        - e.g. `/` will define fields as between each `/`
+        - `tab` is default delimiter
+    ```bash
+    $ cat paths.txt
+    /usr/local/bin
+    /home/user/documents
+    /var/log/system
+    $ cut -d '/' -f 2 paths.txt
+    user
+    home
+    var
+    ```
 - `tr`
     - Translates or deletes characters
     - `-d` specifies deletion
@@ -116,9 +163,9 @@ Weight: 3
     - `-f` ignores case
     - `-r` reverses output 
 
-## Lesson 2
+## **Lesson 2**
 
-### grep
+### **grep**
 - `grep`
     - *global regular expression print*
     - Searches within file for specified pattern
@@ -139,7 +186,7 @@ Weight: 3
     - Can also use `egrep`
         - Depreciated in some systems
 
-### Regular Expressions
+### **Regular Expressions**
 - Extracts data by constructing patterns
 - Commonly used within scripts or when programming
     - Often with high level languages: Perl, Python
@@ -159,14 +206,14 @@ Weight: 3
 | `[^abcABC]` | Match any one character except the ones in the brackets |
 | `[a-z]` | Match any character in the range |
 | `[^a-z]` | Match any character except the ones in the range |
-| `either\|or` | Find either of the listed strings |
+| `either|or` | Find either of the listed strings |
 | `^` | Start of a line |
 | `$` | End of a line |
 | `*` | Zero or more of the preceding pattern |
 | `+` | One or more of the preceding pattern |
 | `?` | Zero or one of the preceding pattern |
 
-```
+```bash
 $ grep "^a" text.txt
 ant
 anvil
