--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -8,13 +8,13 @@ layout: default
 
 ---
 
-# 3.3
+# **3.3**
 Turning Commands into a Script  
 Weight: 4  
 
-## Lesson 1
+## **Lesson 1**
 
-### Commands and PATH
+### **Commands and PATH**
 - `which` 
     - Locates a command
     - `a` prints all matching pathnames of each argument
@@ -92,7 +92,7 @@ Weight: 4
             - `.bash` also used
             - Improves organization, accuracy, speed
 
-### Common Text Editors
+### **Common Text Editors**
 - *vi*
     - Installed by default on almost every Linux system
     - Spawned clone *vi IMproved* aka *vim*
@@ -112,7 +112,7 @@ Weight: 4
     - No modes
     - Uses `Ctrl` to access tools
 
-### Variables
+### **Variables**
 - Go to [Topic 2 - 2.1 - Lesson 2](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)  
     - Refresher on:
         - Variables
@@ -132,7 +132,7 @@ Weight: 4
     - `'`
         - Strong, will convert meaningful symbols to plaintext 
 
-#### Special Variables in Bash
+#### **Special Variables in Bash**
 
 | Variable | Description | Usage |
 |----------|-------------|-------|
@@ -155,7 +155,7 @@ Weight: 4
 | $RANDOM | Generates a random integer between 0 and 32767 | `echo "Random number: $RANDOM"` |
 | $LINENO | The current line number in the script | `echo "This is line $LINENO"` |
 
-### Arguments
+### **Arguments**
 - Reminders
     - Arguments are words or values that follow a command 
     - Arguments provide input or instructions to the command
@@ -167,7 +167,7 @@ Weight: 4
     - The script sets the username value as the third argument using a special variable listed above 
     - The script outputs the results using the special variable
 
-```
+```bash
 $! /bin/bash
 # This is a comment 
 
@@ -177,14 +177,14 @@ echo "hello $username"
 echo "number of arguments: $#"
 ```
 
-```
+```bash
 $ ./bulli.sh cat dog bull
 hello bull
 number of arguments: 3
 ```
-### Conditional Logic in Bash
+### **Conditional Logic in Bash**
 
-#### Common flags
+#### **Common flags**
 
 | Flag | Description |
 |------|-------------|
@@ -239,7 +239,7 @@ number of arguments: 3
 | select | `select var in list` | Generates a menu for user selection |
 
 
-```
+```bash
 #!/bin/bash
 
 # A simple script to greet a single user.
@@ -255,20 +255,20 @@ fi
 echo "number of arguments: $#"
 ```
 
-```
+```bash
 $ ./bulli.sh cat dog bull
 please enter only one argument
 number of arguments: 3
 ```
 
-```
+```bash
 $ ./bulli.sh bull
 hello bull
 number of arguments: 1
 ```
-## Lesson 2
+## **Lesson 2**
 
-### Exit Codes
+### **Exit Codes**
 
 | Exit Code | Name | Meaning |
 |-----------|------|---------|
@@ -318,7 +318,7 @@ number of arguments: 1
 - Checking exit code of last command
     - `echo $?`
 
-### Multiple Arguments 
+### **Multiple Arguments**
 - Array-like special variables
     - Allows script to operate on entire set of arguments at once
     - `$@`
@@ -334,9 +334,9 @@ number of arguments: 1
     - Will decrease value of `$#` by number of shifts
     - Updates `$@`, `$*`
 
-### *for* Loops and Loop Variables
+### ***for* Loops and Loop Variables**
 
-#### Loop variables
+#### **Loop variables**
 - Control iteration of a loop
 - Changes value with each iteration
 - Conventions
@@ -349,12 +349,12 @@ number of arguments: 1
         - Can cause overriding 
 
 
-#### Common loop variables
+#### **Common loop variables**
 - Numeric iterators
     - Often named `i`, `j`, `k`
     - These variables increment numerically
 
-```
+```bash
 for i in {1..5}
 do
     echo "Iteration $i"
@@ -365,7 +365,7 @@ done
     - Variables like `file`, `item`, `element`
     - Represent each item in a list or array
 
-```
+```bash
 for file in *.txt
 do
     echo "Processing $file"
@@ -376,7 +376,7 @@ done
     - Any descriptive name
     - Represents items being iterated 
 
-```
+```bash
 #!/bin/bash
 
 # a friendly script to greet users
@@ -404,7 +404,7 @@ else
 fi
 ```
 
-```
+```bash
 $ ./greeting.sh cat dog horse bull
 hello cat, dog, horse, and bull
 $
@@ -412,13 +412,13 @@ $
 
 #### Using RegEx for Error Checking
 Filtering for only letters example:
-```
+```bash
 $ echo 4n1ml | grep "^[A-Za-z]*$"
 $ echo $?
 1
 ```
 
-```
+```bash
 #!/bin/bash
 
 # a friendly script to greet users
@@ -443,7 +443,7 @@ else
 fi
 ```
 
-```
+```bash
 #!
 
 # Create a script that will take any number of
