--- a/topic1/1_1.md
+++ b/topic1/1_1.md
@@ -77,7 +77,7 @@ Weight: 2
 - Free to use
 
 
-## Embedded systems  
+## **Embedded systems** 
 
 - Linux > proprietary: cross vendor platform compatibility, development, support, and no license fees.  
 - Most popular embedded software projects are:  
