--- a/topic3/3_3.md
+++ b/topic3/3_3.md
@@ -12,9 +12,9 @@ layout: default
 Turning Commands into a Script  
 Weight: 4  
 
-## **Lesson 1**
+# **Lesson 1**
 
-### **Commands and PATH**
+## **Commands and PATH**
 - `which` 
     - Locates a command
     - `a` prints all matching pathnames of each argument
@@ -92,7 +92,7 @@ Weight: 4
             - `.bash` also used
             - Improves organization, accuracy, speed
 
-### **Common Text Editors**
+## **Common Text Editors**
 - *vi*
     - Installed by default on almost every Linux system
     - Spawned clone *vi IMproved* aka *vim*
@@ -112,7 +112,7 @@ Weight: 4
     - No modes
     - Uses `Ctrl` to access tools
 
-### **Variables**
+## **Variables**
 - Go to [Topic 2 - 2.1 - Lesson 2](https://bullintheserver.github.io/linuxstudysessions/topic2/2_1.html)  
     - Refresher on:
         - Variables
@@ -132,7 +132,7 @@ Weight: 4
     - `'`
         - Strong, will convert meaningful symbols to plaintext 
 
-#### **Special Variables in Bash**
+### **Special Variables in Bash**
 
 | Variable | Description | Usage |
 |----------|-------------|-------|
@@ -155,7 +155,7 @@ Weight: 4
 | $RANDOM | Generates a random integer between 0 and 32767 | `echo "Random number: $RANDOM"` |
 | $LINENO | The current line number in the script | `echo "This is line $LINENO"` |
 
-### **Arguments**
+## **Arguments**
 - Reminders
     - Arguments are words or values that follow a command 
     - Arguments provide input or instructions to the command
@@ -182,9 +182,10 @@ $ ./bulli.sh cat dog bull
 hello bull
 number of arguments: 3
 ```
-### **Conditional Logic in Bash**
 
-#### **Common flags**
+## **Conditional Logic in Bash**
+
+### **Common flags**
 
 | Flag | Description |
 |------|-------------|
@@ -266,9 +267,9 @@ $ ./bulli.sh bull
 hello bull
 number of arguments: 1
 ```
-## **Lesson 2**
+# **Lesson 2**
 
-### **Exit Codes**
+## **Exit Codes**
 
 | Exit Code | Name | Meaning |
 |-----------|------|---------|
@@ -318,7 +319,7 @@ number of arguments: 1
 - Checking exit code of last command
     - `echo $?`
 
-### **Multiple Arguments**
+## **Multiple Arguments**
 - Array-like special variables
     - Allows script to operate on entire set of arguments at once
     - `$@`
@@ -334,9 +335,9 @@ number of arguments: 1
     - Will decrease value of `$#` by number of shifts
     - Updates `$@`, `$*`
 
-### ***for* Loops and Loop Variables**
+## ***for* Loops and Loop Variables**
 
-#### **Loop variables**
+### **Loop variables**
 - Control iteration of a loop
 - Changes value with each iteration
 - Conventions
@@ -349,29 +350,25 @@ number of arguments: 1
         - Can cause overriding 
 
 
-#### **Common loop variables**
+### **Common loop variables**
 - Numeric iterators
     - Often named `i`, `j`, `k`
     - These variables increment numerically
-
-```bash
-for i in {1..5}
-do
+    ```bash
+    for i in {1..5}
+    do
     echo "Iteration $i"
-done
-```
-
+    done
+    ```
 - File or item iterators
     - Variables like `file`, `item`, `element`
     - Represent each item in a list or array
-
-```bash
-for file in *.txt
-do
-    echo "Processing $file"
-done
-```
-
+    ```bash
+    for file in *.txt
+    do
+        echo "Processing $file"
+    done
+    ```
 - Custom named variables
     - Any descriptive name
     - Represents items being iterated 
@@ -405,13 +402,12 @@ fi
 ```
 
 ```bash
-$ ./greeting.sh cat dog horse bull
-hello cat, dog, horse, and bull
-$
+$ ./greeting.sh fish dog horse bull
+hello fish, dog, horse, and bull
 ```
 
-#### Using RegEx for Error Checking
-Filtering for only letters example:
+### **Using RegEx for Error Checking**  
+- Filtering for only letters example:
 ```bash
 $ echo 4n1ml | grep "^[A-Za-z]*$"
 $ echo $?
