--- a/topic3/3_2.md
+++ b/topic3/3_2.md
@@ -12,9 +12,9 @@ layout: default
 Searching and Extracting Data from Files  
 Weight: 3 
 
-## **Lesson 1**
+# **Lesson 1**
 
-### **I/O Redirection**
+## **I/O Redirection**
 - *stdin*
     - Channel 0
     - Standard input
@@ -108,7 +108,7 @@ Weight: 3
     - Combines channel 1 and channel 2 outputs 
     - Use same rules as `>` and `>>` but with the channels combined
 
-### **Command Line Pipes**
+## **Command Line Pipes**
 - `|`
     - *Pipes*
     - Link commands directly
@@ -163,9 +163,9 @@ Weight: 3
     - `-f` ignores case
     - `-r` reverses output 
 
-## **Lesson 2**
+# **Lesson 2**
 
-### **grep**
+## **grep**
 - `grep`
     - *global regular expression print*
     - Searches within file for specified pattern
@@ -186,7 +186,7 @@ Weight: 3
     - Can also use `egrep`
         - Depreciated in some systems
 
-### **Regular Expressions**
+## **Regular Expressions**
 - Extracts data by constructing patterns
 - Commonly used within scripts or when programming
     - Often with high level languages: Perl, Python
