--- a/topic4/4_4.md
+++ b/topic4/4_4.md
@@ -8,12 +8,11 @@ layout: default
 
 ---
 
-# 4.4
+# **4.4**
 Your Computer on the Network  
-Weight
-        - 2 
+Weight: 2 
 
-## Basic Network Concepts
+## **Basic Network Concepts**
 - Links
     - Physical connections between two devices allowing for information exchange
         - Copper cables
@@ -70,7 +69,7 @@ Weight
             - Provides email services 
             - Allows remote host login
 
-## Link Layer Networking
+## **Link Layer Networking**
 - Link Layer Address
     - Identifies devices on the same link
     - In Ethernet networks, this address is called a Media Access Control (MAC) address
@@ -116,7 +115,7 @@ Weight
         - Detailed information
             - Queue length, link type, etc.
 
-## Networking Concepts and Keywords (brief summary)
+## **Networking Concepts and Keywords (brief summary)**
 - IPv4 Addresses
     - 32-bit addresses that indicate the source and destination of data packets
     - Theoretical maximum
@@ -153,7 +152,7 @@ Weight
 
 
 
-## IPv4 Address Configuration
+## **IPv4 Address Configuration**
 - Two main methods
   - Manual Assignment
     - The user assigns the IP address manually to a network interface
@@ -215,7 +214,12 @@ ip addr show dev interface_name
     ```
   - This shows the IP configuration for `eth0` only
 
-#### 3. `ping` (Verify Network Connectivity):
+
+
+
+
+
+- `ping` (Verify Network Connectivity)
   - Purpose: Test the reachability of a device on the network by sending ICMP Echo Requests.
   - Syntax:  
     ```bash
@@ -247,17 +251,17 @@ ip addr show dev interface_name
     - If the `-c` parameter is not used, the `ping` command runs indefinitely. 
     - To stop: Press Ctrl + C to terminate the command manually.
 
-#### Key Points to Remember:
-1. Manual IP Configuration:
-   - Use `ip addr add` to assign an IP.
-   - Use `ip addr show` to verify the configuration.
+- Key Points to Remember:
+  - Manual IP Configuration:
+    - Use `ip addr add` to assign an IP.
+    - Use `ip addr show` to verify the configuration.
 
-2. DHCP Setup:
-   - Automatically assigns IPs without manual intervention.
+  - DHCP Setup:
+    - Automatically assigns IPs without manual intervention.
 
-3. Network Connectivity Check:
-   - Use `ping` to test connection to another device.
-   - Control the number of ping requests with `-c`, and stop continuous ping with Ctrl + C.
+  - Network Connectivity Check:
+    - Use `ping` to test connection to another device.
+    - Control the number of ping requests with `-c`, and stop continuous ping with Ctrl + C.
 
 
 
