--- a/topic4/4_1.md
+++ b/topic4/4_1.md
@@ -8,12 +8,12 @@ layout: default
 
 ---
 
-# 4.1
+# **4.1**
 Choosing an Operating System  
 Weight: 1  
 
-## Choosing a Linux Distribution 
-### Operating Systems
+## **Choosing a Linux Distribution**
+### **Operating Systems**
 - Linux-based OSs
     - Enterprise
     - Consumer grade
@@ -23,7 +23,7 @@ Weight: 1
     - Windows Servers
     - Windows Desktops
 
-### Kernel and Distros
+### **Kernel and Distros**
 - Kernel
     - At the core of every distro
     - Manages system resources
@@ -55,9 +55,9 @@ Weight: 1
         - User preferences
         - Hardware configurations
 
-### Types of Distros
+### **Types of Distros**
 
-#### Enterprise Grade Linux Distros 
+#### **Enterprise Grade Linux Distros**
 - Designed for large org/enterprise hardware
 - Meets higher requirements for stability
 - Distros tend to incl. older reliable releases of kernel/software
@@ -73,7 +73,7 @@ Includes:
 - Ubuntu LTS
     - Long term support versions suited for enterprise
 
-#### Consumer Grade Linux Distros  
+#### **Consumer Grade Linux Distros**
 - Meant for SOHO, hobbyist users
 - Likely to be using latest hardware
 - Will need and have latest drivers 
@@ -86,7 +86,7 @@ Includes:
 - Ubuntu non-LTS
 - openSUSE
 
-#### Experimental/Hacker Linux Distributions  
+#### **Experimental/Hacker Linux Distributions**
 - Live on cutting edge of technology
 - Contain recent versions
     - Even if they have bugs or untested features
@@ -98,14 +98,14 @@ Includes:
 - Arch
 - Gentoo
 
-#### Conclusion
+#### **Conclusion**
 - Check https://distrowatch.com/ for more distro options
 - Enterprise hardware
     - Can use both enterprise or consumer distros
 - Consumer hardware
     - Must use consumer distros
 
-### Linux Support Lifecycle
+### **Linux Support Lifecycle**
 - Longest support cycle: enterprise
     - e.g. RHEL has 10 years support
 - Consumer support
@@ -119,7 +119,7 @@ Includes:
         - Formatted YY.MM
         - e.g. 19.04 was released April 2019
 
-### Linux as Your Desktop
+### **Linux as Your Desktop**
 - More challenging in enterprise
     - Desktop support focuses on commercial OS offerings
     - Large investments into software solutions tie users into specific desktop OSs
@@ -134,19 +134,19 @@ Includes:
             - Gnome
             - KDE
 
-### Using Linux on Servers
+### **Using Linux on Servers**
 - Linux servers common in enterprise sector
 - Maintained by Linux specialized engineers
 - Users often ignorant of server they connect to
 - Client apps will not differ between Linux and other OSs in the backend
 - OS further masked as more apps are virtualized or containerized within local and remote clouds
 
-### Linux in the Cloud
+### **Linux in the Cloud**
 - Exercise your skills by deploying a Linux distro on a public cloud
 
-## Non Linux Operating Systems
+## **Non Linux Operating Systems**
 
-### Unix
+### **Unix**
 - Pre Linux
 - Used to be sold along with hardware
 - Several commercial versions still available on the market
@@ -162,7 +162,7 @@ Includes:
     - Irix
     - Solaris
 
-### MacOS
+### **MacOS**
 - Previously OS X
 - Dates back to 2001
 - Based heavily on BSD Unix
@@ -171,12 +171,12 @@ Includes:
     - `-s` returns OS name
     - `-r` returns kernel version number
 
-```
+```bash
 $ uname -s
 Darwin
 ```
 
-### Microsoft Windows
+### **Microsoft Windows**
 - Majority of desktops and laptops will be Windows based
 - Proprietary, is not free 
 - OS license is included when purchasing the hardware
